# coxwave_project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/adapters/inbound/api/: chat_router.py  session_router.py
app/adapters/outbound/chroma/: retriever_repository.py
app/adapters/outbound/inmemory/: cache_repository.py  message_repository.py  session_repository.py
app/adapters/outbound/openai/: embedding_repository.py  llm_repository.py
app/application/ports/: cache_repository.py  embedding_repository.py  llm_repository.py  message_repository.py  retriever_repository.py  session_repository.py
app/application/services/: chat_service.py  session_service.py
app/core/: config.py  container.py  log.py  middleware.py
app/domain/: exception.py  message.py  session.py
app/domain/constant/: chat_role.py  message_type.py
example/: request_to_chatbot.py  start_session.py
scripts/: bertopic_soft_clustering_v4.py  faq_answer_question_pair.jsonl  faq_answer_question_pair_with_categories_v4.jsonl  make_refined_faq_answer_question.py
test/unit/adapters/inbound/api/: test_chat_router.py
test/unit/adapters/outbound/openai/: test_llm_repository.py
test/unit/application/services/: test_chat_service.py
